sun.jdwp.listenerAddress agent property uses wrong encoding

XMLWordPrintable

    • b19

        When the debugging backend listens, it sets the agent property "sun.jdwp.listenerAddress" to the current listening address.

        The code currently uses NewStringUTF() to create the Java string from the C string, which assumes it is given in UTF-8. But in reality, the address is in platform encoding, so it should be converted via JNU_NewStringPlatform().

              Assignee:
              Ralf Schmelter
              Reporter:
              Ralf Schmelter
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: