8222529: sun.jdwp.listenerAddress agent property uses wrong encoding

Reviewed-by: sspitsyn, amenkov, clanger, erikj